# ProjectAnalyzer

./: .gitignore  Cargo.toml  README.md  TODO.md  analyze.py  file_extensions.txt  install.sh
.github/workflows/: cicd.yaml
src/: arg_parser.rs  default_ignore.rs  default_postfixes.rs  input_parser.rs  main.rs  update.rs
src/analyzer/: counter.rs  error.rs  mod.rs  result.rs  walker.rs
src/handlers/: mod.rs  simple_postfix.rs  update.rs  version.rs
src/ui/: chart.rs  mod.rs  table.rs
src/utils/: mod.rs  show_help.rs  walker.rs
