[package]
name = "project_analyzer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
piechart = "1.0.0"
webbrowser = "0.8.11"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks=false
panic = "abort"
