[package]
name = "project_analyzer"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
piechart = "1.0.0"
webbrowser = "0.8.11"
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
clearscreen = "2.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"
rust-embed={version = "8.3.0", features = ["include-exclude"]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks=false
panic = "abort"
